<resources>
    <string name="app_name">Some Application</string>

    //MovieDetails
    <string name="details_header_back">Back</string>
    <string name="age">13+</string>
    <string name="title">Avengers: End Game</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="genre_card">Action, Adventure, Drama</string>
    <string name="reviews">125 REVIEWS</string>
    <string name="time_card">137 MIN</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="ironman">Robert Downey Jr.</string>
    <string name="cap">Chris Evans</string>
    <string name="hulk">Mark Ruffalo</string>
    <string name="thor">Chris Hemsworth</string>
    <string name="start_activity">Start movie details activity</string>
    <string name="rv_space">25</string>


    <string name="movie_details">Movie details</string>

    //MovieList
    <string name="reviews_text">reviews</string>
    <string name="min_text">min</string>
    <string name="plus_text">+</string>

    //Avengers

    //BlackWidow
    <string name="widow_genre">Action, Adventure, Sci-Fi</string>
    <string name="widow_reviews">38 reviews</string>
    <string name="widow_title">Black Widow</string>
    <string name="widow_time">102 min</string>
    <string name="widow_age">13+</string>

    //Tenet
    <string name="women_genre">Action, Adventure, Fantasy</string>
    <string name="women_reviews">74 reviews</string>
    <string name="women_title">Wonder Woman 1984</string>
    <string name="women_time">120 min</string>
    <string name="women_age">16+</string>

    //WonderWoman
    <string name="tenet_genre">Action, Sci-Fi, Thriller</string>
    <string name="tenet_reviews">98 reviews</string>
    <string name="tenet_title">Tenet</string>
    <string name="tenet_time">97 min</string>
    <string name="tenet_age">13+</string>

</resources>
