<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".MovieDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_header"
                android:layout_width="413dp"
                android:layout_height="329dp"
                android:background="@color/bgColor"
                android:src="@drawable/header_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="62dp"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="240dp"
                android:background="@drawable/bg_age"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/age"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/iv_back_arrow"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="160dp"
                android:text="@string/title"
                android:textColor="@color/whiteColor"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_age" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="160dp"
                android:text="@string/genre"
                android:textColor="@color/redOne"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <ImageView
                android:id="@+id/iv_star_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_red_star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_genre" />

            <ImageView
                android:id="@+id/iv_star_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_red_star"
                app:layout_constraintStart_toEndOf="@id/iv_star_one"
                app:layout_constraintTop_toBottomOf="@id/tv_genre" />

            <ImageView
                android:id="@+id/iv_star_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_red_star"
                app:layout_constraintStart_toEndOf="@id/iv_star_two"
                app:layout_constraintTop_toBottomOf="@id/tv_genre" />

            <ImageView
                android:id="@+id/iv_star_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_red_star"
                app:layout_constraintStart_toEndOf="@id/iv_star_three"
                app:layout_constraintTop_toBottomOf="@id/tv_genre" />

            <ImageView
                android:id="@+id/iv_star_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_gray_star"
                app:layout_constraintStart_toEndOf="@id/iv_star_four"
                app:layout_constraintTop_toBottomOf="@id/tv_genre" />

            <TextView
                android:id="@+id/tv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:text="@string/reviews"
                android:textColor="@color/backTextColor"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_star_five"
                app:layout_constraintTop_toBottomOf="@id/tv_genre" />

            <TextView
                android:id="@+id/tv_storyline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="25dp"
                android:text="@string/storyline"
                android:textColor="@color/whiteColor"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_reviews" />

            <TextView
                android:id="@+id/tv_storyline_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="15dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/storyline_description"
                android:textColor="@color/backTextColor"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_storyline" />

            <TextView
                android:id="@+id/tv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="25dp"
                android:text="@string/cast"
                android:textColor="@color/whiteColor"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_storyline_description" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cast">

                <LinearLayout
                    android:id="@+id/layout_ironman"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_ironman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_ironman"
                        app:layout_constraintEnd_toStartOf="@id/iv_cap"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_ironman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ironman"
                        android:textColor="@color/whiteColor"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/tv_cap"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_ironman" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_cap"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/layout_hulk"
                    app:layout_constraintStart_toEndOf="@id/layout_ironman"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_cap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_cap"
                        app:layout_constraintEnd_toStartOf="@id/iv_hulk"
                        app:layout_constraintStart_toEndOf="@id/iv_ironman"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_cap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/cap"
                        android:textColor="@color/whiteColor"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/tv_hulk"
                        app:layout_constraintStart_toStartOf="@id/iv_cap"
                        app:layout_constraintTop_toBottomOf="@id/iv_ironman" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_hulk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/layout_thor"
                    app:layout_constraintStart_toEndOf="@id/layout_cap"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_hulk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_hulk"
                        app:layout_constraintEnd_toStartOf="@id/iv_thor"
                        app:layout_constraintStart_toEndOf="@id/iv_cap"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_hulk"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/hulk"
                        android:textColor="@color/whiteColor"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/tv_thor"
                        app:layout_constraintStart_toStartOf="@id/iv_hulk"
                        app:layout_constraintTop_toBottomOf="@id/iv_ironman" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_thor"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_thor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_thor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_hulk"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_thor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/thor"
                        android:textColor="@color/whiteColor"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/iv_thor"
                        app:layout_constraintTop_toBottomOf="@id/iv_ironman" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>